--- a/macros.tex
+++ b/macros.tex
@@ -51,3 +51,5 @@
 \newcommand{\coft}{\texttt{4T}\ensuremath{^\ast}}
 \newcommand{\coot}{\texttt{1T}\ensuremath{^\ast}}
 
+% Connected sum
+\newcommand{\hash}{\mathbin{\#}}
